# wazuh-agent-status

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  checksums.sha256  cliff.toml  darwin.go  go.mod  go.sum  justfile  linux.go  main.go  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  windows.go
.github/workflows/: build-linux.yaml  build-macos.yaml  build-windows.yaml  build.yaml  ci.yml  release.yaml  scripts.yaml
crates/wazuh-status-client/: package.json
crates/wazuh-status-client/src-tauri/: Cargo.toml  tauri.conf.json
crates/wazuh-status-client/src-tauri/capabilities/: default.json
crates/wazuh-status-client/src-tauri/icons/: icon.icns
crates/wazuh-status-client/src-tauri/src/: lib.rs  main.rs
crates/wazuh-status-common/: Cargo.toml
crates/wazuh-status-common/src/: lib.rs
crates/wazuh-status-core/: Cargo.toml
crates/wazuh-status-core/src/: lib.rs
crates/wazuh-status-daemon/: Cargo.toml
crates/wazuh-status-daemon/src/: main.rs
crates/wazuh-status-proto-build/: Cargo.toml  build.rs
crates/wazuh-status-proto-build/src/: lib.rs
crates/wazuh-status-socket/: Cargo.toml
crates/wazuh-status-socket/src/: lib.rs
docs/: architecture.md  roadmap.md  rust-migration-technical-proposal.md
docs/architecture/: architecture.md  current-system-analysis.md  phase-1-rust-client-plan.md
docs/architecture/adr/: adr-001-use-rust.md  adr-002-use-grpc.md  adr-002-use-mtls-command-protocol.md  adr-003-use-mtls.md  adr-004-split-agent-architecture.md  adr-005-asynchronous-io.md  adr-006-state-management.md  adr-007-secure-secret-storage.md
git-cliff/: CHANGELOG.md
proto/: wazuh_status.proto
scripts/: adorsys-update.ps1  adorsys-update.sh  install.ps1  install.sh  install_Mac.sh  keep  uninstall.ps1  uninstall.sh  update-notifier.ps1
scripts/linux/: adorsys-update.sh  install.sh  uninstall.sh
scripts/macos/: adorsys-update.sh  install.sh  uninstall.sh
scripts/shared/: utils.ps1  utils.sh
scripts/windows/: adorsys-update.bat  adorsys-update.ps1  install.ps1  uninstall.ps1
wazuh-agent-status/: darwin.go  go.mod  go.sum  helpers.go  linux.go  main.go  unix.go  version_test.go  windows.go
wazuh-agent-status-client/: checksums.sha256  go.mod  go.sum  main.go  notifications_windows.go
wazuh-agent-status-rust/: index.html  package-lock.json  package.json
wazuh-agent-status-rust-client/: .gitignore  Cargo.toml  Dockerfile  build-macos.sh  build.sh  package-lock.json  package.json  wazuh-agent-status.desktop
wazuh-agent-status-rust-client/src/: App.css  App.tsx  backend.rs  main.rs  tray.rs
wazuh-agent-status-rust-client/src-tauri/: Cargo.toml  app_config.json  tauri.conf.json
wazuh-agent-status-rust-client/src-tauri/icons/: icon.icns
wazuh-agent-status-rust-client/src-tauri/src/: agent.rs  commands.rs  config.rs  lib.rs  secret_store.rs  tls_utils.rs
wazuh-agent-status-rust-client/src/components/: Icons.tsx  LogsView.tsx  SettingsView.tsx  StatusView.tsx  UpdatesView.tsx
wazuh-agent-status-rust-client/src/types/: agent.ts  app.ts
wazuh-agent-status-rust-client/src/utils/: format.ts
wazuh-agent-status-rust-server/: Cargo.toml
wazuh-agent-status-rust-server/scripts/: generate_test_certs.sh
wazuh-agent-status-rust-server/src/: config.rs  errors.rs  group_extractor.rs  http.rs  lib.rs  main.rs  manager.rs  models.rs  secret_store.rs  server.rs  tls.rs  version_utils.rs
wazuh-agent-status-rust-server/src/status_provider/: linux.rs  macos.rs  mod.rs  windows.rs
wazuh-agent-status-rust-server/src/updater/: mod.rs  unix.rs  windows.rs
wazuh-agent-status-rust-server/tests/: agent_groups.rs  config_test.rs  manager_test.rs  serialization.rs  server_cmds.rs  tls_test.rs  version_logic.rs
wazuh-agent-status-rust-server/tests/resources/certs/: ca.key  ca.pem  client.key  client.pem  server.key  server.pem
wazuh-agent-status-rust-server/tests/resources/certs/untrusted/: ca.key  ca.pem  client.key  client.pem
wazuh-agent-status-rust/src/: App.css  App.tsx
wazuh-agent-status-rust/src-tauri/: Cargo.toml  app_config.json  tauri.conf.json
wazuh-agent-status-rust/src-tauri/capabilities/: default.json
wazuh-agent-status-rust/src-tauri/src/: agent.rs  commands.rs  config.rs  lib.rs  tray.rs
wazuh-agent-status-rust/src/components/: SettingsView.tsx  StatusView.tsx  UpdatesView.tsx
wazuh-agent-status-rust/src/types/: agent.ts  app.ts
wazuh-update-notifier/: go.mod  go.sum  main.go
