[workspace]
members = [
    "crates/wazuh-status-client/src-tauri",
    "crates/wazuh-status-common",
    "crates/wazuh-status-core",
    "crates/wazuh-status-daemon",
    "crates/wazuh-status-proto-build",
    "crates/wazuh-status-socket",
]

resolver = "3"

[workspace.dependencies]
wazuh-core = { path = "crates/wazuh-status-core" }
wazuh-proto-build = { path = "crates/wazuh-status-proto-build" }
wazuh-socket = { path = "crates/wazuh-status-socket" }
wazuh-common = { path = "crates/wazuh-status-common" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
derive_builder = "0.20"

tauri = { version = "2 ", features = [ "tray-icon", "image-png" ] }
tauri-plugin-opener = "2"
tauri-build = { version = "2", features = [] }

prost = "0.14"
prost-types = "0.14"
tokio-stream = "0.1"
async-trait = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tonic-build = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
prost-build = { version = "0.14" }
walkdir = { version = "2.5" }

rand = "0.9"
clap = { version = "4", features = ["derive", "env"] }

anyhow = { version = "1" }
thiserror = { version = "2" }
sha2 = "0.10"

axum = { version = "0.8" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "ansi", "serde_json"] }
tracing-appender = { version = "0.2" }
tracing-attributes = { version = "0.1" }
tracing = { version = "0", features = ["attributes", "async-await", "std"] }
tracing-error = { version = "0.2" }
tracing-flame = "0.2.0"
inferno = "0.12.4"

mimalloc = "0"
futures = "0.3"
tempfile = "3"
base64 = "0.22"
ciborium = "0.2"
reqwest = { version = "0.13.1", default-features = false }
regex = "1.12"
toml = "0.9"
time = { version = "0.3", features = ["formatting", "macros"] }
handlebars = "6.3.2"

mime = "0.3.17"
log = "0.4.29"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
incremental = false
strip = true
panic = "abort"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
publish = false
authors = [
    "Stephane Segning <selastlambou@gmail.com>",
    "adorsys GIS <gis-udm@adorsys.com>"
]
