[package]
name = "wazuh-agent-status-rust-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.19"
tao = "0.30"
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
image = "0.25" # For icon processing

[package.metadata.packager]
product-name = "Wazuh Agent Status"
identifier = "com.adorsys.wazuh-agent-status"
icons = ["assets/wazuh-logo.png"]
out-dir = "./target/release/bundle"

[[package.metadata.packager.binaries]]
filename = "wazuh-agent-status-rust-client"
main = true

[package.metadata.packager.macos]
minimum-system-version = "10.13"
