[package]
name = "wazuh-agent-status-rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ctrlc = "3.4" # For graceful shutdown
reqwest = { version = "0.12", features = ["json"] }
