[package]
name = "wazuh-agent-status-rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
anyhow       = "1.0"
thiserror    = "2.0"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"
reqwest      = { version = "0.12", features = ["json"] }
sysinfo      = "0.33"
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
x509-parser = "0.16"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tempfile = "3.27.0"
