[package]
name = "wazuh-status-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true }
wazuh-status-proto-build = { workspace = true }
wazuh-status-socket = { workspace = true }
