[package]
name = "wazuh-status-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
